--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallex effect</title>
-    <link rel="stylesheet" href="style.css">
+    <title>CSS Background</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="wrapper">
-        <div class="container">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
+    <div class="container">
+        <h1>Generate CSS Code</h1>
+        <button id="generateCodeButton">Generate Code</button>
+        <pre id="code"></pre>
     </div>
 </body>
 </html>
